2007-08-28  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c: Pack NULL strings same as "" (from libmtp).

2007-08-22  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon Coolpix S200 (from Marius Groeger) 
	* library.c: Added Nikon Coolpix L12, Cowon iAudio U3

2007-08-03  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h, ptp-pack.c: From libmtp:
	  Pack/unpack 64bit integers.
	  Fixed packing of arrays.

2007-07-26  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Merged MTP devices from libmtp.

2007-07-18  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h: Added PTP reset handling (from libmtp).

	* ptp-pack.c, config.c: Handle EOS CameraTime (just a UNIX timestamp again)

2007-07-17  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot S5 IS.

2007-07-03  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, config.c: Set EOS properties.

	* library.c: Added Kodak C613 id.

	* ptp.c,ptp.h: Added freeing of objectinfos.

2007-06-29  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Only allow Nikon fast fs retrieval on the USB port.

2007-06-22  Marcus Meissner  <marcus@jet.franken.de>

	* Added Sony DSC-W200 (new Sony id!)

2007-06-17  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: If we get errors on OpenSession try
	  to send RESET USB control message to the device
	  to reset it / clear buffered stuff.

2007-06-15  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Nikon Coolpix series capture now determines
	  the captured filenames.

2007-06-05  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, ptp-pack.c, library.c, config.c:
	  Started EOS 400D+ style capture support.

	* ptp.h: Added lots of new Canon Powershot specific defines.

2007-05-28  Paul Walmsley <paul@booyaka.com>

	* usb.c: replace gp_port_usb_check_int_fast() calls with
        timeout save/change/restore and gp_port_usb_check_int()

2007-05-25  Paul Walmsley <paul@booyaka.com>
